added redundancy check for triangles

--- a/TPS/userhome/bluej/bluej.properties
+++ b/TPS/userhome/bluej/bluej.properties
@@ -1,13 +1,20 @@
 #BlueJ properties. Settings in this file override "bluej.defs"
-#Wed May 20 14:48:32 EDT 2020
-bluej.recentProject0=C\:\\Users\\Jordan Polun\\OneDrive - CCSU\\Code\\Triangle-Peg-Solitaire\\TPS
+#Thu May 21 07:48:36 EDT 2020
 session.numeditors.stride=0
 bluej.uid=953ec7ca-f4a7-42b0-bcdb-451680d281b1
-bluej.editor.fontsize=12
+bluej.openPackage1=C\:\\Users\\Jordan Polun\\OneDrive - CCSU\\Code\\Triangle-Peg-Solitaire\\TPS
+bluej.terminal.buffering=true
+bluej.editor.stride.sidebarShowing=true
+bluej.startWithTextEval=false
+bluej.terminal.clearscreen=true
+bluej.terminal.height=547
+bluej.terminal.width=974
+bluej.recentProject0=C\:\\Users\\Jordan Polun\\OneDrive - CCSU\\Code\\Triangle-Peg-Solitaire\\TPS
+bluej.terminal.dividerpos=501039
 blackbox.uuid=682b920b-8eb2-432c-b3e8-0f2d318fa621
+bluej.editor.fontsize=12
 bluej.language=english
 extensions.org.bluej.extensions.submitter.Submitter.settings.saslrealm=
-bluej.editor.stride.sidebarShowing=true
-bluej.terminal.y=16
-bluej.terminal.x=16
+bluej.terminal.y=540
+bluej.terminal.x=0
 session.numeditors.java=2
